--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -4,7 +4,7 @@
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>Admin, welcome to the Spring Boot Security page!</h1>
+<h1>!Admin, welcome to the Spring Boot Security page!</h1>
 <h3><a href="/admin/add">New User</a></h3>
 <table border="1">
     <thead>
@@ -20,19 +20,17 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.id}"></td>
-        <td th:text="${user.firstname}"></td>
-        <td th:text="${user.lastname}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${user.username}"></td>
-        <td th:text="${user.password}"></td>
+    <tr th:each="user : ${user}">
+        <td th:text="${user.id}">ID</td>
+        <td th:text="${user.firstname}">Firstname</td>
+        <td th:text="${user.lastname}">Lastname</td>
+        <td th:text="${user.email}">Email</td>
+        <td th:text="${user.username}">Username</td>
+        <td th:text="${user.password}">Password</td>
+        <td th:each="role : ${user.authorities}" th:text="${role}">ROLE</td>
         <td>
-            <span th:each="role : ${user.roles}" th:text="${role.name} + ','"></span>
-        </td>
-        <td>
-            <a th:href="@{/edit/{id}(id=${user.id})}">Edit User</a>
-            <a th:href="@{/delete/{id}(id=${user.id})}">Delete</a>
+            <a th:href="@{/admin/edit/{id}(id=${user.id})}">Edit User</a>
+            <a th:href="@{/admin/delete/{id}(id=${user.id})}">Delete</a>
         </td>
     </tr>
     </tbody>
