--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -5,7 +5,7 @@
     <title>Add User</title>
 </head>
 <body>
-<h1>User Form</h1>
+<h1>Add User</h1>
 <form th:action="@{/admin/add}" method="post">
     <div>
         <label for="firstname">Firstname: </label>
@@ -26,6 +26,12 @@
     <div>
         <label for="password">Password: </label>
         <input type="text" id="password" name="password">
+    </div>
+    <div>
+        <label for="roles">Roles</label>
+        <select id="roles" name="roles" th:field="*{user.roles}">
+            <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+        </select>
     </div>
     <input type="submit" value="Submit"/>
 </form>
