--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -27,6 +27,12 @@
             <input type="text" id="password" name="password">
         </div>
         <div>
+            <label for="roles">Roles</label>
+            <select id="roles" name="roles" th:field="*{user.roles}">
+                <option th:each="role : ${allRoles}" th:value="${role.id}" th:text="${role.name}"></option>
+            </select>
+        </div>
+        <div>
             <button type="submit">Register</button>
         </div>
     </form>
